syntax = "proto3";

package base;

service BaseService {
  rpc ListBases(ListBasesRequest) returns (ListBasesResponse) {}
  rpc GetBase(GetBaseRequest) returns (Base) {}
  rpc GetBaseByEmail(GetBaseByEmailRequest) returns (Base) {}
  rpc CreateBase(CreateBaseRequest) returns (Base) {}
  rpc UpdateBase(UpdateBaseRequest) returns (Base) {}
  rpc DeleteBase(DeleteBaseRequest) returns (Base) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

enum AccountKind {
  ACCOUNT_KIND_BASE = 0;
  ACCOUNT_KIND_ORGANIZATION = 1;
  ACCOUNT_KIND_SUPER_ADMIN = 2;
  ACCOUNT_KIND_USER = 3;
}

message Base {
  string id = 1;
  AccountKind kind = 2;
  Role role = 3;
  string displayName = 4;
  string email = 5;
  optional string password = 6;
}

message ListBasesRequest {
  optional int32 page_size = 1;
  optional string next_page_cursor = 2;
}

message ListBasesResponse {
  repeated Base bases = 1;
  string next_page_cursor = 2;
}

message GetBaseRequest {
  string id = 1;
}

message GetBaseByEmailRequest {
  string email = 1;
}

message CreateBaseRequest {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message UpdateBaseRequest {
  string id = 1;
  optional string displayName = 2;
  optional string email = 3;
}

message DeleteBaseRequest {
  string id = 1;
}
